--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <title>RPG Town</title>
 </head>
 <body>
-  <canvas id="game" width="400" height="600"></canvas>
+  <canvas id="game" height="400" width="600" style="height: 400px; width: 600px;"></canvas>
   <script src="input-handler.js"></script>
+  <script src="map.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
