--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <canvas id="game" height="400" width="600" style="height: 400px; width: 600px;"></canvas>
   <script src="input-handler.js"></script>
   <script src="map.js"></script>
+  <script src="objects.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
