--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <script src="input-handler.js"></script>
   <script src="map.js"></script>
   <script src="objects.js"></script>
+  <script src="globals.js"></script>
+  <script src="render.js"></script>
+  <script src="character.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
